# lat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  pyproject.toml
.github/workflows/: docker-image-build-and-push.yml  docker-image.yml
jenkins/: admin.py  models.py  views.py
jenkins/migrations/: 0001_initial.py
lat/: apps.py
lightweight_automation_tool/: asgi.py  constants.py  context_processors.py  settings.py  urls.py  wsgi.py
static/CACHE/css/: output.34e499636283.css  output.89a4f7bf8fe5.css  output.abcece9931cd.css  output.f7183d5e6fbf.css
static/src/: output.css
templates/: _base.html  index.html
templates/jenkins/: index.html
