[tool.poetry]
name = "lightweight-automation-tool"
version = "0.1.0"
description = ""
authors = ["Jonathan Lee <jonathan.lee.devel@gmail.com>"]
readme = "README.md"
packages = [{include = "lightweight_automation_tool"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
python-dotenv = "^1.0.0"
django-compressor = "^4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
